hack/k8s/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-terminal
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-terminal
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: next-terminal
    spec:
      containers:
      - name: next-terminal
        image: ghcr-proxy.hk1.godu.dev/ysicing/next-terminal
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 125Mi

---
apiVersion: v1
kind: Service
metadata:
  name: next-terminal
  namespace: prod
spec:
  selector:
    app: next-terminal
  type: ClusterIP
  ports:
  - name: http-8080
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacd
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
      - name: guacd
        image: ghcr-proxy.hk1.godu.dev/ysicing/guacd
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 125Mi
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: prod
spec:
  selector:
    app: guacd
  type: ClusterIP
  ports:
  - name: http-4822
    protocol: TCP
    port: 4822
    targetPort: 4822    
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nt.internal.ysicing.net
  namespace: prod
spec:
  rules:
  - host: nt.internal.ysicing.net
    http:
      paths:
      - path: /
        backend:
          serviceName: domain
          servicePort: 8080
  tls:
  - hosts:
    - nt.internal.ysicing.net
    secretName: ie.ysicing.net
